Add react-tabs package and implement Transactions page

--- a/Template1/src/index.css
+++ b/Template1/src/index.css
@@ -13,6 +13,10 @@ body {
   font-weight: 400;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .custom-label {
   @apply text-sm font-semibold;
 }
@@ -35,4 +39,17 @@ body {
 }
 ::-ms-reveal {
   display: none;
+}
+.react-tabs {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.react-tabs__tab-list {
+  @apply mb-2 p-0;
+}
+.react-tabs__tab {
+  @apply inline-block relative list-none px-4 py-2 cursor-pointer -bottom-px text-2xl font-semibold;
+}
+.react-tabs__tab--selected {
+  @apply border-b-4 border-primaryBtn text-primaryBtn;
 }
