--- a/Template1/src/index.css
+++ b/Template1/src/index.css
@@ -9,6 +9,10 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
 }
