--- a/Template1/src/index.css
+++ b/Template1/src/index.css
@@ -4,17 +4,12 @@
 @tailwind utilities;
 
 html {
-  height: 100%;
   line-height: 1.2;
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
-  font-weight: 400;
-}
-
-* {
-  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  font-weight: 300;
 }
 
 .custom-label {
