--- a/Template1/src/index.css
+++ b/Template1/src/index.css
@@ -7,11 +7,11 @@ html {
   line-height: 1.2;
 }
 
-<<<<<<< HEAD
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
-=======
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -19,7 +19,6 @@ body {
   padding: 0;
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
->>>>>>> ee85fa45290d0a6e7b5fcf478361d7bc4d14176c
 }
 
 /* Track */
